--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,7 +7,7 @@
   justify-content: center;
   background-color: #4b3869;
   font-family: inherit;
-  border-radius: 1.5%;
+  border-radius: 1rem;
   left: 50%;
   transform: translateX(-50%);
 }
