--- a/src/styles/ClearAll.css
+++ b/src/styles/ClearAll.css
@@ -5,7 +5,7 @@
   padding: 1rem;
   width: 10%;
   margin: 0.5rem auto;
-  border-radius: 5%;
+  border-radius: 1rem;
   cursor: pointer;
   font-size: 1.2rem;
 }
@@ -14,4 +14,10 @@
   transition: ease-out 0.2s;
   background-color: #498b8f;
   color: #4b3869;
+}
+
+@media screen and (max-width: 768px) {
+  .clear-all-btn {
+    width: 100%;
+  }
 }
