--- a/src/styles/ClearAll.css
+++ b/src/styles/ClearAll.css
@@ -8,6 +8,7 @@
   border-radius: 1rem;
   cursor: pointer;
   font-size: 1.2rem;
+  font-family: 'Architects Daughter', cursive;
 }
 
 .clear-all-btn:hover {
@@ -19,5 +20,6 @@
 @media screen and (max-width: 768px) {
   .clear-all-btn {
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
   }
 }
