--- a/src/styles/TodoInput.css
+++ b/src/styles/TodoInput.css
@@ -55,5 +55,9 @@ input[type='submit']:hover {
     position: relative;
     left: 50%;
     transform: translateX(-52%);
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  input[type='text'] {
+    font-family: Arial, Helvetica, sans-serif;
   }
 }
